request to itunes api working. results are displayed on page

--- a/index.html
+++ b/index.html
@@ -20,16 +20,11 @@
         </div>
         <hr>
             <form class="row" id="search-form">
-               <div class="col-12"><input type="text" value="Search Artists"></div> 
-               <div class="col-1"><button type="button" >Search</button></div>
+               <div class="col-12"><input id="search-input" type="text" value="Search Artists/Albums/Songs"></div> 
+               <div class="col-1"><button id="search-button" type="submit" >Search</button></div>
             </form>
         <hr>
-        <div class="row row-between">
-            <div class="col-3">TEST</div>
-            <div class="col-3">TEST</div>
-            <div class="col-3">TEST</div>
-            <div class="col-3">TEST</div>
-            <div class="col-3">TEST</div>
+        <div id="results-div" class="row row-between">
         </div>
     </div>
 </body>
