Modified css: added styles to track/artist names, modified padding of result divs

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Music Search App</title>
     <script src="script.js" defer></script>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway:700, 400" rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                <div class="col-1"><button id="search-button" type="submit" >Search</button></div>
             </form>
         <hr>
-        <div id="results-div" class="row row-between">
+        <div id="results-div" class="row row-start">
         </div>
     </div>
 </body>
